2004-07-18 Braden McDaniel  <braden@endoframe.com>

	delete_route should throw unsupported_interface.

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h

2004-07-18 Braden McDaniel  <braden@endoframe.com>

	Allow viewers to be associated with and detached from browsers.
	This is not optimal, but we need to retain a viewer reference so
	that destroyed nodes can deallocate resources allocated in the
	renderer.  To really handle this properly, we probably need to
	have viewers created from a factory function on browser.  But to
	implement that, we need to be able to register viewer
	implementations; and we're not in a position to do that yet.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/viewer.cpp
	* src/libopenvrml/openvrml/viewer.h
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.h
	* src/lookat/lookat.cpp

2004-07-06 Braden McDaniel  <braden@endoframe.com>

	Cull conformance test table from the distribution in the
	interest of making a release.  No time to update it at the
	moment.

	* doc/Doxyfile.in
	* doc/Makefile.am
	* doc/doxygen-header

2004-07-03 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/ScriptJDK.cpp:  Eliminated use of
	<strstream.h>.

2004-06-01 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/Makefile.am:  Define GTK_DISABLE_DEPRECATED.
	* mozilla-plugin/src/openvrml.cpp:  Replace use of deprecated
	GTK+ features.
	* mozilla-plugin/src/gtkvrml/vrmlbrowser.cc:  Replace use of
	deprecated GTK+ features; fixed bug with processing redraw
	events generated from within the scene.

2004-06-01 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.cpp:  Created "Nodes" module in
	Doxygen documentation.

2004-06-01 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp:  Fixed crash on last
	frame of MovieTexture.
